tests/invalid/multiple_object_inheritance.wio
object BaseA {
}

object BaseB {
}

@From(BaseA)
@From(BaseB)
object Child {
}

fn Entry(args: string[]) -> i32 {
    return 0;
}
